--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -33,6 +33,10 @@
   name = "github.com/sirupsen/logrus"
   version = "1.4.2"
 
+[[constraint]]
+  name = "github.com/spf13/cobra"
+  version = "0.0.5"
+
 [prune]
   go-tests = true
   unused-packages = true
