--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -21,12 +21,13 @@ archives:
     386: 32-bit
     amd64: 64-bit
   format: zip
+  files:
+    - README.md
 checksum:
   name_template: 'checksums.txt'
 snapshot:
   name_template: "{{ .Version }}_{{ .ShortCommit }}"
 changelog:
-  sort: asc
   filters:
     exclude:
     - '^docs:'
