--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -2,7 +2,8 @@ before:
   hooks:
     - make ensure
 builds:
-- env:
+- binary: go-cron
+  env:
     - CGO_ENABLED=0
   ldflags:
     - -s -w -X main.build={{ .Version }} -X main.commit={{ .ShortCommit }} -X main.date={{ .Date }}
